<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Urban Game</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="active_eng">ACTIVE</string>
 	<string name="ended_eng">ENDED</string>
 	<string name="observed_eng">OBSERVED</string>
 	<string name="TEMPtop_bar">top bar</string>
 	<string name="TEMPbottom_bar">bottom bar</string>
</resources>